[tool.poetry]
name = "postgres-homeworks"
version = "0.1.0"
description = ""
authors = ["vavil <vavilon164@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
psycopg2 = "^2.9.9"


[tool.poetry.group.lint.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = false
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
